--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -105,7 +105,7 @@
   - "makefile"
   - "*.txt"
 
-- name: TBA secure channels lab
+- name: secure channels lab
   lab: true
   short_name: securechannel
   removed_page: labhw/signatures.html
