--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -111,6 +111,7 @@
   removed_page: labhw/signatures.html
   page: labhw/secure-channel.html
   tentative: true
+  submit_file: attack.c
   due: 2023-03-01
 
 
