fixup submitted files in assignments.yml

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -61,6 +61,7 @@
   - "*.c"
   - "*.h"
   - "README"
+  - "LICENSE"
   - "Makefile"
   - "makefile"
   - "*.txt"
@@ -74,6 +75,7 @@
   - "*.c"
   - "*.h"
   - "README"
+  - "LICENSE"
   - "Makefile"
   - "makefile"
   - "*.txt"
@@ -100,6 +102,7 @@
   - "*.c"
   - "*.h"
   - "README"
+  - "LICENSE"
   - "Makefile"
   - "makefile"
   - "*.txt"
