missing submit_files

--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -62,6 +62,7 @@
   - "*.h"
   - "README"
   - "LICENSE"
+  - "ACK*"
   - "Makefile"
   - "makefile"
   - "*.txt"
@@ -76,6 +77,7 @@
   - "*.h"
   - "README"
   - "LICENSE"
+  - "ACK*"
   - "Makefile"
   - "makefile"
   - "*.txt"
@@ -103,6 +105,7 @@
   - "*.h"
   - "README"
   - "LICENSE"
+  - "ACK*"
   - "Makefile"
   - "makefile"
   - "*.txt"
