--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -105,8 +105,6 @@
   title: IP + connection abstraction
   reading: "[protocols](readings/protocols.html) §1-2"
   slides: yes
-  slides_prelim: yes
-  slides_extra: yes
   description: |
     *  mailbox analogy
        *  inboxes and outboxes
@@ -126,6 +124,8 @@
 - date: 2023-02-16
   week: 5
   title: IP +  routing
+  slides: yes
+  slides_prelim: yes
   reading: "[protocols](readings/protocols.html) §1-2"
   description: |
     *  running example: a frame
