--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -133,25 +133,28 @@
     *  IP
        *  addresses (v4, v6)
        *  routers
-    *  port numbers and UDP
-    *  firewalls <!-- FIXME: not in reading! -->
+    *  port numbers and UDP (start)
 
 - date: 2023-02-21
   week: 6
-  title: URLs + DHCP + DNS / buses
-  reading: "[protocols](readings/protocols.html) §3-4, [buses](readings/bus.html)"
+  title: URLs + DHCP + DNS
+  reading: "[protocols](readings/protocols.html) §3-4"
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   description: |
-    *  URLs
-    *  DHCP / v6 autoconfiguration?
+    *  port numbers and UDP (finish)
     *  DNS
        *  is a distributed database
        *  with caching
+    *  URLs
+    *  (if time) link-layer to network-layer mapping
+    *  DHCP
+    *  NAT
 
-    *  processor buses
-       *  half-duplex versus full-duplex
-       *  I/O bridge idea <!-- FIXME: still accurate? -->
-    *  direct-memory accesses <!-- FIXME: what prereqs are covered in COA1 -->
-
+    *  firewalls, briefly <!-- FIXME: not in reading! -->
+    *  DDoS
+    *  spoofing
 
 - date: 2023-02-22
   lab: true
@@ -162,9 +165,6 @@
   title: network security / secure channels 1
   reading: "[security](readings/sec.html) §1"
   description: |
-    *  DDoS
-    *  spoofing
-
     *  cryptography (start)
        *  cryptographic hashes
        *  symmetric encryption
@@ -190,9 +190,13 @@
 
 - date: 2023-03-02
   week: 7
-  title: caches 1
-  reading: "[cache](readings/cache.html) §4, 1-3, 5"
+  title: buses / caches 1
+  reading: "[buses]9eadings/bus.html),  [cache](readings/cache.html) §4, 1-3, 5"
   description: |
+    *  processor buses
+       *  full-duplex v half-duplex
+       *  DMA and devices
+
     *  memory hierarchy
     *  locality
     *  direct-mapped cache
