--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -57,14 +57,14 @@
   page: labhw/pagetable.html
   portion: 0.25
   due: 2023-02-15
-  submit_describe: |
+  grade_describe: |
     Selected notes on interpreting our testing output below:
     <ul>
     <li>the "reallocation" test calls page_allocate twice for the same address</li>
     <li>tests that count how many pages are allocated are counting calls to posix_memalign</li>
     <li>when looking for "allocated page table entries" or "non-allocated page table entries", the tests are looking at the indices it thinks should be allocated based on its calls to page_allocate(). So you could fail these tests both because of computing the indices wrong or because the page table entry content is not what we expect</li>
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
-    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again</li>
+    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
     </ul>
   submit_files:
@@ -82,14 +82,14 @@
   page: labhw/pagetable.html
   portion: 0.25
   due: 2023-02-22
-  submit_describe: |
+  grade_describe: |
     Selected notes on interpreting our testing output below:
     <ul>
     <li>the "reallocation" test calls page_allocate twice for the same address</li>
     <li>tests that count how many pages are allocated are counting calls to posix_memalign</li>
     <li>when looking for "allocated page table entries" or "non-allocated page table entries", the tests are looking at the indices it thinks should be allocated based on its calls to page_allocate(). So you could fail these tests both because of computing the indices wrong or because the page table entry content is not what we expect</li>
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
-    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again</li>
+    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
     </ul>
   submit_files:
@@ -120,14 +120,14 @@
   page: labhw/pagetable.html
   portion: 2.0
   due: 2023-03-01
-  submit_describe: |
+  grade_describe: |
     Selected notes on interpreting our testing output below:
     <ul>
     <li>the "reallocation" test calls page_allocate twice for the same address</li>
     <li>tests that count how many pages are allocated are counting calls to posix_memalign</li>
     <li>when looking for "allocated page table entries" or "non-allocated page table entries", the tests are looking at the indices it thinks should be allocated based on its calls to page_allocate(). So you could fail these tests both because of computing the indices wrong or because the page table entry content is not what we expect</li>
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
-    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again</li>
+    <li>some tests check that prior allocations still work (with translate()) after calling page_allocate() again (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
     </ul>
   submit_files:
