--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -66,6 +66,7 @@
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
     <li>some tests check that prior allocations still work (with translate()) after more calls to page_allocate() (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
+    <li>the "pre-allocate" tests call translate() before any calls to page_allocate</li>
     </ul>
   submit_files:
   - "*.c"
@@ -91,6 +92,7 @@
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
     <li>some tests check that prior allocations still work (with translate()) after more calls to page_allocate() (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
+    <li>the "pre-allocate" tests call translate() before any calls to page_allocate</li>
     </ul>
   submit_files:
   - "*.c"
@@ -129,6 +131,7 @@
     <li>tests that check that allocations are "page sized" check both the total bytes allocated and that the allocation starts at the beginning of a page rather than spanning multiple pages</li>
     <li>some tests check that prior allocations still work (with translate()) after more calls to page_allocate() (for other pages)</li>
     <li>if the tests fail to completely run, this may be because the tests tried to dereference a value returned by translate() which was an invalid pointer, or because your code segfaulted. If you're worried that your code might segfault, I'd suggest using <a href="https://www.cs.virginia.edu/~jh2jf/courses/cs2130/fall2022/readings/memory.html#detecting-and-avoiding-bugs">AddressSanitizer</a> (along with your own tests) to try to find memory errors in your code. (AddressSanitizer can detect many errors consistently when they may only sometimes cause segfaults.)</li>
+    <li>the "pre-allocate" tests call translate() before any calls to page_allocate</li>
     </ul>
   submit_files:
   - "*.c"
