--- a/_data/assignments.yml
+++ b/_data/assignments.yml
@@ -152,17 +152,30 @@
   submit_file: attack.c
   due: 2023-03-01
 
-- name: cachelab
+- name: memoize
   lab: true
-  old_page: labhw/memoize.html
+  page: labhw/memoize.html
   tentative: true
   due: 2023-03-15
+
+- name: cache exercises
+  lab: true
+  tentative: true
+  due: 2023-03-22
 
 - name: cache programs
   short_name: cache-programs
   tentative: true
   page: labhw/cache-programs.html
-  due: 2023-03-22
+  due: 2023-03-29
+
+- name: TLB
+  short_name: tlb
+  comment: no introducing lab
+  page: labhw/tlb.html
+  comments: wrapper for pagetable 2
+  tentative: true
+  due: 2023-03-29
 
 - name: sync games
   lab: true
@@ -171,7 +184,7 @@
   tentative: true
   comments: needs changes for in-person?
   comments: need .php stuff
-  due: 2023-03-22
+  due: 2023-03-29
 
 - name: pthreads (dining philosophers) 
   lab: true
@@ -184,21 +197,6 @@
   comments: "FIXME: needs more infrastructure for second optional approach"
   comments: "SHOULD HAVE ADDTL REQUIRED APPROACH"
   comments: "Non-DP example?"
-  due: 2023-03-29
-
-- name: TLB
-  short_name: tlb
-  comment: no introducing lab
-  page: labhw/tlb.html
-  comments: wrapper for pagetable 2
-  tentative: true
-  due: 2023-03-29
-
-- name: openmp
-  short_name: openmp
-  lab: true
-  tentative: true
-  page: labhw/openmp.html
   due: 2023-04-05
 
 - name: fork
@@ -209,12 +207,11 @@
   tentative: true
   due: 2023-04-05
 
-- name: templates
+- name: openmp
+  short_name: openmp
   lab: true
-  comment: needs CSO1 fixups
-  comment: C++ stuff
-  page: labhw/templates.html
   tentative: true
+  page: labhw/openmp.html
   due: 2023-04-12
 
 - name: life
@@ -228,9 +225,12 @@
   comment: sanitize-examples.sh script
   comment: ThreadSanitizer stuff
 
-- name: C++2x?
-  short_name: cpp
+- name: templates
   lab: true
+  comment: needs CSO1 fixups
+  comment: C++ stuff
+  page: labhw/templates.html
+  tentative: true
   due: 2023-04-19
 
 - name: pipeline
@@ -238,6 +238,11 @@
   page: labhw/pipeline.html
   tentative: true
   due: 2023-04-19
+
+- name: C++2x?
+  short_name: cpp
+  lab: true
+  due: 2023-04-26
 
 - name: TBA OOO assignment
   short_name: OOO
