--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -139,8 +139,6 @@
   title: URLs + DHCP + DNS
   reading: "[protocols](readings/protocols.html) §3-4"
   slides: yes
-  slides_prelim: yes
-  slides_extra: yes
   description: |
     *  port numbers and UDP (finish)
     *  DNS
@@ -158,6 +156,9 @@
 - date: 2023-02-23
   week: 6
   title: network security / secure channels 1
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   reading: "[security](readings/sec.html) §1-1.5, 3"
   description: |
     *  cryptography (start)
