--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -227,8 +227,7 @@
   reading: "[processes and threads](readings/thread.html)"
   description: |
     > (Guest lecture; Prof Reiss will be out of town.)
-    *  examples: cache misses and C code
-
+    *  review: caches
     *  the TLB
 
     *  processes, threads
@@ -243,11 +242,11 @@
     *  alternatives to fork
     *  proceses in the shell
     *  waiting for processes
+    *  file descriptors
+    *  pipe and dup2
 
     *  pthreads: creating threads
     *  Amdahl's law <!-- demo? -->
-    *  atomicity, race conditions
-       *   consistency preview
 
 - date: 2023-03-22
   lab: true
@@ -258,9 +257,10 @@
   title: synchronization 2
   reading: "[pthreads](readings/pthread.html); [sync](readings/sync.html) §8, 2-7"
   description: |
+    *  atomicity, race conditions
+       *   consistency preview
     *  locks and mutexes
     *  atomic read-modify-write instructions
-    *  monitors (mutexes + condition variables)
     *  barriers
 
 
@@ -269,11 +269,9 @@
   title: synchronization 3 / roll back 
   reading: "[sync](readings/sync.html) §9"
   description: |
+    *  monitors (mutexes + condition variables)
     *  semaphores
     *  reader/writer locks
-
-    *  transactions
-    *  redo logging
 
 - date: 2023-03-29
   lab: true
@@ -290,17 +288,17 @@
 
 - date: 2023-04-04
   week: 12
-  title: buses / processors
-  reading: "[buses](readings/bus.html), [processors](readings/processors.html) §1-2"
+  title: roll back / buses 
+  reading: "[sync](readings/sync.html) §9, [buses](readings/bus.html)"
   description: |
+   *  transactions
+   *  redo logging
+
    *  buses, full/half-duplex
       *  relationship to networking
    *  connecting to I/O devices
    *  DMA
 
-   *  review: single-cycle CPU
-   *  pipelining idea
-   *  pipleining for the CPU
 
 - date: 2023-04-05
   lab: true
@@ -308,32 +306,27 @@
 
 - date: 2023-04-06
   week: 12
-  title: pipeline
-  reading: "[processors](readings/processors.html) §2"
+  title: pipeline 1
+  reading: "[processors](readings/processors.html) §1-2"
   description: |
-   *  dependencies and hazards
-      *  data flow graphs
-   *  hazard handling, part 1
-      *  stalling / waiting
-      *  forwarding and forwarding logic
-   *  pipeline timing
+   *  review: single-cycle CPU
+   *  pipelining idea
+   *  pipleining for the CPU
 
 - date: 2023-04-11
   week: 13
   title: speculation
-  reading: "[processors](readings/processors.html) §2.1.3"
+  reading: "[processors](readings/processors.html) §2"
   description: |
+    *  dependencies and hazards
+      *  data flow graphs
+    *  hazard handling, part 1
+      *  stalling / waiting
+      *  forwarding and forwarding logic
+    *  pipeline timing
     *  speculation idea
        *  guess and check later
        *  undo when wrong
-    *  speculation for branch taken versus not
-       *  always taken
-       *  forward taken, backwards not taken
-       *  using history
-    *  speculation for branch targets
-    *  other speculation
-       *  for values?
-       *  that there won't be a segfault?
 
 
 - date: 2023-04-12
@@ -342,10 +335,24 @@
 
 - date: 2023-04-13
   week: 13
-  title: out-of-order
-  reading: "[processors](readings/procesors.html) §3"
+  title: out-of-order 1
+  reading: "[processors](readings/procesors.html) §2-3"
   description: |
+    *  speculation for branch taken versus not
+       *  always taken
+       *  forward taken, backwards not taken
+       *  using history
+    *  speculation for branch targets
+    *  other speculation
+       *  for values?
+       *  that there won't be a segfault?
     *  dependency graph revisited
+
+- date: 2023-04-18
+  week: 14
+  reading: "[processors](readings/procesors.html) §3"
+  title: out-of-order 2
+  description: |
     *  register renaming
        *  (? need for multiple register versions)
        *  simplifying to microinsturctions, maybe
@@ -353,14 +360,6 @@
        *  and hookup via buses?
     *  reorder buffer
     *  throughput
-
-- date: 2023-04-18
-  week: 14
-  title: power
-  description: |
-    *  P = IV; V = IR
-    *  transitor speed+count versus power tradeoffs
-    *  overclocking and variable clock rates
 
 - date: 2023-04-19
   lab: true
