--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -210,6 +210,9 @@
 
 - date: 2023-03-14
   week: 9
+  sludes: yes
+  slides_prelim: yes
+  slides_extra: yes
   title: caches 2
   reading: "[cache](readings/cache.html) §4, 1-3, 5"
   description: |
