--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -216,10 +216,10 @@
   title: caches 2
   reading: "[cache](readings/cache.html) §4, 1-3, 5"
   description: |
+    *  cache misses and C code
+
     *  set-associative cache
     *  replacement policies
-
-    *  briefly, write policies
 
 
 - date: 2023-03-15
@@ -230,15 +230,20 @@
   week: 9
   title: caches 3 / concurrency 1
   reading: "[processes and threads](readings/thread.html)"
+  slides_see: 20230314
+  slides: yes
+  slides_prelim: yes
+  slides_extra: yes
   description: |
     > (Guest lecture; Prof Reiss will be out of town.)
 
     *  review: caches
-    *  (possibly) cache misses and C code
+    *  write policies
+
     *  the TLB
 
-    *  processes, threads
-    *  creating new processes
+    *  (if time) processes, threads
+    *  (if time) creating new processes
        *  fork, exec*
 
 - date: 2023-03-21
