--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -252,7 +252,7 @@
   slides: yes
   slides_prelim: yes
   slides_see2: 2023-03-23
-  reading: "[pthreads](readings/pthread.html); [sync](readings/sync.html) §1, 2, 4; skim [consistency](readings/consistency.html)"
+  reading: "[pthreads](readings/pthreads.html); [sync](readings/sync.html) §1, 2, 4; skim [consistency](readings/consistency.html)"
   description: |
     *  processes, threads
     *  creating new processes
